# SYProject

./: .gitignore
back/: .gitignore  README.md  pyproject.toml
back/app/: main.py
back/app/core/: database.py
back/app/models/: marketing_model.py
back/app/repositories/: marketing_repo.py
back/app/routers/: marketing_router.py
back/app/schemas/: marketing_schema.py
back/app/services/: excel_reader_service.py  excel_service.py  marketing_service.py
back/example/: (HM)스메그_DA_META협력광고_29cmFOCUS 운영성과_260420.xlsx  HM_스메그_29cm-협력광고-보고서 (1).xlsx  ~$(🔸SA) 매체별 데이터 & 경쟁사 모니터링_20265월.xlsx  키워드 비교 이번주저번주.xlsx
back/example/1/: (HM) daily,1921185 (1).csv  (HM) daily_매체데이터,1921168.csv  (HM) daily_전환데이터,1921168.csv  (주)아이비김영_김영편입_맞춤보고서_20260501_20260524.csv
front/: eslint.config.mjs  package-lock.json  package.json
front/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
front/components/marketing/: CommentSection.tsx  DbDashboard.tsx  ExcelReportView.tsx  ExcelUploadPanel.tsx  FileInput.tsx  MainTabs.tsx  ReportDashboard.tsx  ReportView.tsx  ResultCard.tsx  StatusPoller.tsx  UploadForm.tsx
front/components/ui/: BottomTaskBar.tsx  Button.tsx  Modal.tsx  Spinner.tsx  Toast.tsx
front/lib/: marketingClient.ts  reportStorage.ts
front/lib/server/: marketingApi.ts
front/types/: marketing.ts
