[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi-pagination>=0.15.13",
    "fastapi[standard]>=0.136.3",
    "openai>=2.38.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
